--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -35,4 +36,29 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
+
+    //animation lottie
+    implementation 'com.airbnb.android:lottie:5.0.3'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+
+
+
+    implementation "androidx.browser:browser:1.4.0"
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.google.mlkit:barcode-scanning:17.0.1'
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:17.0.0'
 }
