--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
 
-
+    // Rounded Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation "androidx.browser:browser:1.4.0"
     implementation 'com.google.zxing:core:3.3.3'
