--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.happyhour">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".App"
@@ -12,16 +15,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.HappyHour">
+        <activity
+            android:name=".activities.Activity_bar_tables"
+            android:exported="true"
+            android:screenOrientation="portrait">
 
-
+        </activity>
         <activity
             android:name=".activities.Activity_create_bar"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.Activity_bar_details"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.Activity_registration_private_account"
             android:exported="false"
@@ -32,10 +39,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.Activity_bar_account"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.Activity_login"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
