--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
     testImplementation 'junit:junit:4.13.2'
+    implementation "androidx.browser:browser:1.4.0"
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.google.mlkit:barcode-scanning:17.0.1'
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:17.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -61,12 +65,11 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //image picker
-    implementation 'com.github.dhaval2404:imagepicker:1.8'
+    implementation 'com.github.Drjacky:ImagePicker:2.1.16'
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation "androidx.fragment:fragment-ktx:1.3.3"
 
-    implementation "androidx.browser:browser:1.4.0"
-    implementation 'com.google.zxing:core:3.3.3'
-    implementation 'com.google.mlkit:barcode-scanning:17.0.1'
-    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:17.0.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
